--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "symfony/expression-language": "^2.8|^3.0",
         "symfony/property-access": "^2.8|^3.0"
     },
+    "suggest" : {
+        "symfony/framework-bundle": "For Symfony integration"
+    },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.2"
     },
