--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
+        "php": ">=7.1",
         "doctrine/collections": "^1.3",
-        "symfony/expression-language": "^2.8|^3.0",
-        "symfony/property-access": "^2.8|^3.0"
+        "symfony/expression-language": "^3.0 || ^4.0",
+        "symfony/property-access": "^3.0 || ^4.0"
     },
     "suggest" : {
         "symfony/framework-bundle": "For Symfony integration"
