--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/framework-bundle": "For Symfony integration"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8|^5.2"
+        "phpunit/phpunit": "^7.3"
     },
     "autoload": {
         "psr-4": {
