--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,16 @@
         "symfony/expression-language": "^3.0 || ^4.0",
         "symfony/property-access": "^3.0 || ^4.0"
     },
-    "suggest" : {
+    "suggest": {
         "symfony/framework-bundle": "For Symfony integration"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.3"
+        "phpunit/phpunit": "^7.3",
+        "symfony/framework-bundle": "^3,0 || ^4.0"
     },
     "autoload": {
         "psr-4": {
-            "Ruler\\" : "src/"
+            "Ruler\\": "src/"
         }
     }
 }
